--- a/eye-shield.html
+++ b/eye-shield.html
@@ -222,10 +222,10 @@
                         Contact Us
                     </h3>
                     <p class="privacy-card-text">
-                        <strong>Developer:</strong> Adobix Tech<br>
-                        <strong>Email:</strong> adobixtech@gmail.com<br>
+                        <strong>Developer:</strong> Md Wazid Ali<br>
+                        <strong>Email:</strong> mdwazidali205@gmail.com<br>
                         <strong>App:</strong> Eye Guard - Blue Light Filter<br>
-                        <strong>Package:</strong> com.tool.eyeshieldpro<br>
+                        <strong>Package:</strong> com.eyeguard.bluelightfilter<br>
                         <strong>Last Updated:</strong> <span id="currentDate"></span>
                     </p>
                     <p class="privacy-card-text">
